modified:   GameStore.Frontend/Components/Layout/NavMenu.razor

--- a/GameStore.Frontend/Components/Layout/NavMenu.razor
+++ b/GameStore.Frontend/Components/Layout/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar bg-body-tertiary" data-bs-theme="dark">
   <div class="container">
-    <span class="navbar-brand mb-0 h1">Game Store</span>
+    <span class="navbar-brand mb-0 h1">Game Store 2</span>
   </div>
 </nav>
